java_programs/error.txt
Tictactoe.java:35: error: cannot find symbol
			p_move = getPMove(board);
			^
  symbol:   variable p_move
  location: class Tictactoe
Tictactoe.java:36: error: cannot find symbol
			board[p_move] = "O";
			      ^
  symbol:   variable p_move
  location: class Tictactoe
Tictactoe.java:66: error: cannot find symbol
			String preference = getUserPreference.nextString();
			                                     ^
  symbol:   method nextString()
  location: variable getUserPreference of type Scanner
Tictactoe.java:81: error: cannot find symbol
		if (preference.equals(bigC) || preference.equals(smC)) {
		                      ^
  symbol:   variable bigC
  location: class Tictactoe
Tictactoe.java:81: error: cannot find symbol
		if (preference.equals(bigC) || preference.equals(smC)) {
		    ^
  symbol:   variable preference
  location: class Tictactoe
Tictactoe.java:81: error: cannot find symbol
		if (preference.equals(bigC) || preference.equals(smC)) {
		                                                 ^
  symbol:   variable smC
  location: class Tictactoe
Tictactoe.java:81: error: cannot find symbol
		if (preference.equals(bigC) || preference.equals(smC)) {
		                               ^
  symbol:   variable preference
  location: class Tictactoe
Tictactoe.java:105: error: incompatible types: String cannot be converted to int
		int spam = checkForWin(board);
		                      ^
Tictactoe.java:107: error: int cannot be dereferenced
		if (spam.equals("X")) {
		        ^
Tictactoe.java:111: error: int cannot be dereferenced
		if (spam.equals("O")) {
		        ^
Tictactoe.java:134: error: bad operand types for binary operator '=='
		if (board[0] == board[1] == board[2])
		                         ^
  first type:  boolean
  second type: String
Tictactoe.java:136: error: bad operand types for binary operator '=='
		else if (board[3] == board[4] == board[5])
		                              ^
  first type:  boolean
  second type: String
Tictactoe.java:138: error: bad operand types for binary operator '=='
		else if (board[6] == board[7] == board[8])
		                              ^
  first type:  boolean
  second type: String
Tictactoe.java:140: error: bad operand types for binary operator '=='
		else if (board[0] == board[3] == board[6])
		                              ^
  first type:  boolean
  second type: String
Tictactoe.java:142: error: bad operand types for binary operator '=='
		else if (board[1] == board[4] == board[7])
		                              ^
  first type:  boolean
  second type: String
Tictactoe.java:144: error: bad operand types for binary operator '=='
		else if (board[2] == board[5] == board[8])
		                              ^
  first type:  boolean
  second type: String
Tictactoe.java:146: error: bad operand types for binary operator '=='
		else if (board[0] == board[4] == board[8])
		                              ^
  first type:  boolean
  second type: String
Tictactoe.java:148: error: bad operand types for binary operator '=='
		else if (board[2] == board[4] == board[6])
		                              ^
  first type:  boolean
  second type: String
Tictactoe.java:158: error: cannot find symbol
			if (!(board[spot] == "X" || board[i] == "O"))
			                                  ^
  symbol:   variable i
  location: class Tictactoe
Tictactoe.java:159: error: cannot find symbol
				available.add(spot);
				^
  symbol:   variable available
  location: class Tictactoe
Tictactoe.java:166: error: incompatible types: String[] cannot be converted to int[]
				int[] board_copy = board.clone();
				                              ^
Tictactoe.java:167: error: cannot find symbol
				board_copy[move] = options[i];
				           ^
  symbol:   variable move
  location: class Tictactoe
Tictactoe.java:167: error: incompatible types: String cannot be converted to int
				board_copy[move] = options[i];
				                           ^
Tictactoe.java:167: error: incompatible types: String cannot be converted to int
				board_copy[move] = options[i];
				                          ^
Tictactoe.java:168: error: incompatible types: int[] cannot be converted to String[]
				if (checkForWin(board_copy))
				                ^
Tictactoe.java:169: error: cannot find symbol
					return board[move];
					             ^
  symbol:   variable move
  location: class Tictactoe
Tictactoe.java:169: error: incompatible types: String cannot be converted to int
					return board[move];
					            ^
Tictactoe.java:177: error: array required, but ArrayList<Integer> found
			if (Arrays.asList(possible_moves).contains(possible_moves[k]))
			                                                         ^
Tictactoe.java:177: error: cannot find symbol
			if (Arrays.asList(possible_moves).contains(possible_moves[k]))
			    ^
  symbol:   variable Arrays
  location: class Tictactoe
Tictactoe.java:178: error: array required, but ArrayList<Integer> found
				good_spots.add(possible_moves[k]);
				                             ^
Tictactoe.java:186: error: cannot find symbol
			int choice = rand.nextInt(available.length);
			                          ^
  symbol:   variable available
  location: class Tictactoe
Tictactoe.java:187: error: incompatible types: String cannot be converted to int
			return board[choice];
			            ^
Tictactoe.java:194: error: array required, but ArrayList<Integer> found
			if (Arrays.asList(possible_moves).contains(possible_moves[m]))
			                                                         ^
Tictactoe.java:194: error: cannot find symbol
			if (Arrays.asList(possible_moves).contains(possible_moves[m]))
			    ^
  symbol:   variable Arrays
  location: class Tictactoe
Tictactoe.java:195: error: array required, but ArrayList<Integer> found
				edge_spots.add(possible_moves[m]);
				                             ^
Tictactoe.java:200: error: cannot find symbol
			int choice = rand.nextInt(available.length);
			                          ^
  symbol:   variable available
  location: class Tictactoe
Tictactoe.java:201: error: incompatible types: String cannot be converted to int
			return board[choice];
			            ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
37 errors
